first attempt at changes for beacon

--- a/cfg/acq.cfg
+++ b/cfg/acq.cfg
@@ -80,7 +80,7 @@ control:
 device: 
 {
   //spi devices, master first, requires restart to change
-  spi_devices = ("/dev/spidev2.0", "/dev/spidev1.0"); 
+  spi_device = "/dev/spidev1.0"; 
 
   // circular buffer capacity. In-memory storage in between acquisition and writing. Requires restart.
   buffer_capacity = 256;
@@ -113,9 +113,8 @@ device:
   apply_attenuations = 0;
 
   // attenuation, per channel, if applied. 
-  attenuation = ( 
-               {ch0: 9;  ch1: 3;  ch2: 11;  ch3: 8;  ch4: 7;  ch5: 19;  ch6: 11;  ch7: 3;  } ,
-               {ch0: 23;  ch1: 10;  ch2: 27;  ch3: 27;  ch4: 0;  ch5: 0;  ch6: 0;  ch7: 0;  } ) ;
+  attenuation =  {ch0: 9;  ch1: 3;  ch2: 11;  ch3: 8;  ch4: 7;  ch5: 19;  ch6: 11;  ch7: 3;  };
+              
 
   //which channels to digitize
   channel_read_mask = (0xff, 0x3); 
