--- a/cfg/startup.cfg
+++ b/cfg/startup.cfg
@@ -1,32 +1,14 @@
 //Configuration file for nuphase-start
 
-//Minimum temperature, in C, to turn on FPGA's
-min_temperature=-4;
-
-// Current in mA to run the heater at
-heater_current=500;
-
-// ASPS method, "serial" or "http"
-asps_method = "http";
-
-// The polling interval (to check temperature and heater state) in seconds
-poll_interval = 5;
-
 // Command to run after turning on boards to tune attenuations 
 set_attenuation_cmd = "cd /home/nuphase/nuphase-python; python set_attenuation.py";
 
 // Command to run after turning on boards to reconfigure FGPA's
-reconfigure_fpga_cmd = "cd /home/nuphase/nuphase-python;  python reconfigureFPGA.py -a 1; python nuphase.py; python reconfigureFPGA.py -a 0; python nuphase.py"
+reconfigure_fpga_cmd = "cd /home/nuphase/nuphase-python;  python reconfigureFPGA.py -a 0; python nuphase.py;"
 
-//rms goal for master 
-desired_rms_master = 4.200000;
-
-//rms goal for slave 
-desired_rms_slave = 7.000000;
+//rms goal
+desired_rms= 4.200000;
 
 //output directory 
 out_dir="/data/startup/";
-
-//number of checks for each temperature
-nchecks=3;
 
