default acq cfg

--- a/cfg/acq.cfg
+++ b/cfg/acq.cfg
@@ -1,8 +1,7 @@
 // config file for nuphase-acq
 // not all options are changeable by restart
 
-// settings
-// related to threshold  / trigger control
+// settings related to threshold  / trigger control
 // These all can be set without restarting
 control:
 {
@@ -23,10 +22,19 @@ control:
      beam12 : 0.75;
      beam13 : 0.75;
      beam14 : 0.75;
+     beam15 : 0.75;
+     beam16 : 0.75;
+     beam17 : 0.75;
+     beam18 : 0.75;
+     beam19 : 0.75;
+     beam20 : 0.75;
+     beam21 : 0.75;
+     beam22 : 0.75;
+     beam23 : 0.75;
     };
 
    //the beams allowed to participate in the trigger
-   trigger_mask = 0x7fff;
+   trigger_mask = 0xffffff;
 
    // the channels on the master allowed to participate in the trigger
    channel_mask = 0xff;
@@ -41,7 +49,7 @@ control:
    k_d = 0;
 
    // max threshold increase per step 
-   max_threshold_increase = 500; 
+   max_threshold_increase=500;
 
    //monitoring interval, for PID loop (in seconds)
    monitor_interval = 1;
@@ -89,19 +97,19 @@ device:
   waveform_length = 512;
 
   //the pretrigger window length, in hardware units
-  pretrigger = 6; //with trig verification set to true (firmware default), set pretrig to 6. If trig verification off, pretrig=4 works well
+  pretrigger = 6;
 
   //calpulser state, 0 (off) , 2 (baseline)  or 3 (calpulser)
   calpulser_state = 0;
 
   // Whether or not to enable the trigger output
   enable_trigout = 1;
- 
-  // Whether or not to enable external trigger input
-  enable_extin = 0; 
 
-  // The width of the trigger output in 40 ns intervals 
-  trigout_width = 3; 
+  // Whether or not to enable external trigger input
+  enable_extin = 0;
+
+  // The width of the trigger output in 40 ns intervals
+  trigout_width = 3;
 
   // Whether or not to disable the trigger output on exit
   disable_trigout_on_exit = 1;
@@ -113,27 +121,25 @@ device:
   apply_attenuations = 0;
 
   // attenuation, per channel, if applied. 
-  attenuation =  {ch0: 9;  ch1: 3;  ch2: 11;  ch3: 8;  ch4: 7;  ch5: 19;  ch6: 11;  ch7: 3;  };
-              
+  attenuation =  {ch0: 9;  ch1: 3;  ch2: 11;  ch3: 8;  ch4: 7;  ch5: 19;  ch6: 11;  ch7: 3;  } ;
 
   //which channels to digitize
-  channel_read_mask = (0xff, 0x3); 
+  channel_read_mask = 0xff; 
 
   //command used to run the alignment program.
-  alignment_command="cd /home/nuphase/nuphase-python/;  python align_adcs.py ",
+  alignment_command="cd /home/nuphase/nuphase-python/;  python align_adcs.py",
 
-
-  //channel trig delays (right now can be 0-3) 
-  trig_delays = { 
-    ch0: 0;
-    ch1: 0; 
-    ch2: 0; 
-    ch3: 0; 
-    ch4: 0; 
-    ch5: 0; 
-    ch6: 0; 
-    ch7: 0; 
-  }; 
+  //channel trig delays (right now can be 0-3)
+  trig_delays = {
+     ch0 : 0;
+     ch1 : 0;
+     ch2 : 0;
+     ch3 : 0;
+     ch4 : 0;
+     ch5 : 0;
+     ch6 : 0;
+     ch7 : 0;
+  };
 
 };
 
@@ -149,7 +155,7 @@ output:
   //print to screen interval (0 to disable)
   print_interval = 10;
 
-  // run length, in seconds [20000 good for atten scans, 10800 nominal run?]
+  // run length, in seconds
   run_length = 10800; 
 
   //events per output file
@@ -165,10 +171,9 @@ output:
   poll_usecs = 500;
 
   // Colon separated list of paths to copy (recursively) into run dir at start of run
-  copy_paths_to_rundir = "/home/nuphase/nuphase-python/output:/proc/loadavg" 
+  copy_paths_to_rundir = "/home/nuphase/nuphase-python/output:/proc/loadavg";
 
   //Whether or not to copy configs into run dir
-  copy_configs = 1; 
-
+  copy_configs = 1;
 };
 
