--- a/cfg/copy.cfg
+++ b/cfg/copy.cfg
@@ -1,10 +1,13 @@
 //Configuration file for nuphase-copy
 
 //The host to copy data to
-remote_hostname = "radproc";
+remote_hostname = "beacon_archive";
+
+// The ssh port through which to access the remote
+port = 2234;
 
 //The remote path to copy data to
-remote_path = "/home/radio/data/nuphase01/2018/raw_data";
+remote_path = "/home/radio/data_archive/integrationAug2018"
 
 //The remote user to copy data as (if you didn't set up ssh keys, this won't work so well)
 remote_user = "radio";
@@ -22,5 +25,5 @@ delete_files_older_than = 7;
 wakeup_interval = 600;
 
 //If non-zero, won't actually delete any files
-dummy_mode = 0;
+dummy_mode = 1;
 
