Add trigger_polarization to acq_cfg

--- a/cfg/acq.cfg
+++ b/cfg/acq.cfg
@@ -60,6 +60,9 @@ control:
    //enable the phased trigger readout
    enable_phased_trigger = 1;
 
+   //Which polarization to trigger on, 0=H, 1=V, higher values reserved for as-yet unimplemented combinations
+   trigger_polarization = 0;
+
    //delay for phased trigger to start
    secs_before_phased_trigger = 20;
 
@@ -127,7 +130,7 @@ device:
   channel_read_mask = 0xff; 
 
   //command used to run the alignment program.
-  alignment_command="cd /home/nuphase/nuphase-python/;  python align_adcs.py",
+  alignment_command="cd /home/nuphase/nuphase-python/;  python align_adcs.py -m",
 
   //channel trig delays (right now can be 0-3)
   trig_delays = {
