Enumified trigger_polarization

--- a/cfg/acq.cfg
+++ b/cfg/acq.cfg
@@ -60,8 +60,10 @@ control:
    //enable the phased trigger readout
    enable_phased_trigger = 1;
 
-   //Which polarization to trigger on, 0=H, 1=V, higher values reserved for as-yet unimplemented combinations
-   trigger_polarization = 0;
+   // Polarization for triggering, current options are "H", "V"
+   // @see config_lookup_pol in nuphase-cfg.c
+   // @see nuphase_trigger_polarization_t in nuphasedaq.h in libnuphase
+   trigger_polarization = "H";
 
    //delay for phased trigger to start
    secs_before_phased_trigger = 20;
