Add min_threshold to acq.cfg

--- a/cfg/acq.cfg
+++ b/cfg/acq.cfg
@@ -48,6 +48,9 @@ control:
    // pid loop differential term
    k_d = 0;
 
+   // puts a floor on the thresholds
+   min_threshold=1000;
+
    // max threshold increase per step 
    max_threshold_increase=500;
 
