Snapshot of somewhat  working version

--- a/systemd/nuphase-startup.service
+++ b/systemd/nuphase-startup.service
@@ -4,8 +4,8 @@
 [Unit] 
 Description=Wait until it is warm enough to turn on FPGA
 Before=nuphase-acq.service nuphase-hk.service nuphase-copy.service 
-Wants=dev-ttyUSB0.device
-After=dev-ttyUSB0.device
+#Wants=dev-ttyUSB0.device
+#After=dev-ttyUSB0.device
 
 
 
