add fixed thresholds mode, low pass trigger, and dynamic masking options

--- a/cfg/acq.cfg
+++ b/cfg/acq.cfg
@@ -33,12 +33,55 @@ control:
      beam23 : 0.0;
     };
 
+    // fixed thresholds for each beam (in case of use_fixed_thresholds) 
+    fixed_threshold = { 
+     beam0  : 20000;
+     beam1  : 20000;
+     beam2  : 20000;
+     beam3  : 20000;
+     beam4  : 20000;
+     beam5  : 20000;
+     beam6  : 20000;
+     beam7  : 20000;
+     beam8  : 20000;
+     beam9  : 20000;
+     beam10 : 20000;
+     beam11 : 20000;
+     beam12 : 20000;
+     beam13 : 20000;
+     beam14 : 20000;
+     beam15 : 20000;
+     beam16 : 20000;
+     beam17 : 20000;
+     beam18 : 20000;
+     beam19 : 20000;
+     beam20 : 0;
+     beam21 : 0;
+     beam22 : 0; 
+     beam23 : 0; 
+    }
+
+
    //the beams allowed to participate in the trigger
    trigger_mask = 0xffffff;
 
    // the channels on the master allowed to participate in the trigger
    channel_mask = 0xff;
 
+
+   // enable on-board dynamic masking
+   enable_dynamic_masking = 1; 
+
+   // dynamic_masking_threshold
+   dynamic_masking_threshold = 10; 
+
+   // dynamic_masking_holdoff
+   dynamic_masking_holdoff = 10; 
+
+
+   // use fixed thresholds (don't servo!) 
+   use_fixed_thresholds = 0; 
+   
    // pid loop proportional term
    k_p = 10;
 
@@ -148,6 +191,11 @@ device:
      ch6 : 0;
      ch7 : 0;
   };
+
+  // Enable the low pass to trigger
+  enable_low_pass_to_trigger = 1; 
+
+
 
 };
 
