--- a/cfg/startup.cfg
+++ b/cfg/startup.cfg
@@ -1,7 +1,7 @@
 //Configuration file for nuphase-start
 
 // Command to run after turning on boards to tune attenuations 
-set_attenuation_cmd = "cd /home/nuphase/nuphase_python; python set_attenuation.py";
+set_attenuation_cmd = "";
 
 // Command to run after turning on boards to reconfigure FGPA's
 reconfigure_fpga_cmd = "cd /home/nuphase/nuphase_python;  python reconfigureFPGA.py -a 0; python nuphase.py;"
