mass rename to beacon

--- a/cfg/copy.cfg
+++ b/cfg/copy.cfg
@@ -1,4 +1,4 @@
-//Configuration file for nuphase-copy
+//Configuration file for beacon-copy
 
 //The host to copy data to
 remote_hostname = "beacon_archive";
