--- a/cfg/acq.cfg
+++ b/cfg/acq.cfg
@@ -1,4 +1,4 @@
-// config file for nuphase-acq
+// config file for beacon-acq
 // not all options are changeable by restart
 
 // settings related to threshold  / trigger control
@@ -107,8 +107,8 @@ control:
    enable_phased_trigger = 1;
 
    // Polarization for triggering, current options are "H", "V"
-   // @see config_lookup_pol in nuphase-cfg.c
-   // @see nuphase_trigger_polarization_t in nuphasedaq.h in libnuphase
+   // @see config_lookup_pol in beacon-cfg.c
+   // @see beacon_trigger_polarization_t in beacondaq.h in libbeacon
    trigger_polarization = "H";
 
    //delay for phased trigger to start
@@ -127,7 +127,7 @@ control:
    subtract_gated = 1;
 
    //File to persist the status info (primarily for saving thresholds between restarts)
-   status_save_file = "/nuphase/last.st.bin"
+   status_save_file = "/beacon/last.st.bin"
 
    // load thresholds from status file on start.
    load_thresholds_from_status_file=1
@@ -178,7 +178,7 @@ device:
   channel_read_mask = 0xff; 
 
   //command used to run the alignment program.
-  alignment_command="cd /home/nuphase/nuphase_python/;  python align_adcs.py -m",
+  alignment_command="cd /home/beacon/beacon_python/;  python align_adcs.py -m",
 
   //channel trig delays (right now can be 0-3)
   trig_delays = {
@@ -203,7 +203,7 @@ device:
 output: 
 {
   // Run file, used to persist run number
-  run_file = "/nuphase/runfile";
+  run_file = "/beacon/runfile";
 
   // output directory, data will go here
   output_directory = "/data/" ;
@@ -227,7 +227,7 @@ output:
   poll_usecs = 500;
 
   // Colon separated list of paths to copy (recursively) into run dir at start of run
-  copy_paths_to_rundir = "/home/nuphase/nuphase_python/output:/proc/loadavg";
+  copy_paths_to_rundir = "/home/beacon/beacon_python/output:/proc/loadavg";
 
   //Whether or not to copy configs into run dir
   copy_configs = 1;
