--- a/cfg/hk.cfg
+++ b/cfg/hk.cfg
@@ -1,4 +1,4 @@
-//Configuration file for nuphase-hk
+//Configuration file for beacon-hk
 //Polling interval, in seconds. Treated as integer.  
 interval=5;
 
