--- a/cfg/startup.cfg
+++ b/cfg/startup.cfg
@@ -1,10 +1,10 @@
-//Configuration file for nuphase-start
+//Configuration file for beacon-start
 
 // Command to run after turning on boards to tune attenuations 
 set_attenuation_cmd = "";
 
 // Command to run after turning on boards to reconfigure FGPA's
-reconfigure_fpga_cmd = "cd /home/nuphase/nuphase_python;  python reconfigureFPGA.py -a 0; python nuphase.py;"
+reconfigure_fpga_cmd = "cd /home/beacon/beacon_python;  python reconfigureFPGA.py -a 0; python beacon.py;"
 
 //rms goal
 desired_rms= 4.200000;
