--- a/cfg/startup.cfg
+++ b/cfg/startup.cfg
@@ -4,7 +4,8 @@
 set_attenuation_cmd = "";
 
 // Command to run after turning on boards to reconfigure FGPA's
-reconfigure_fpga_cmd = "cd /home/nuphase/nuphase_python;  python reconfigureFPGA.py -a 0; python nuphase.py;"
+//reconfigure_fpga_cmd = "sleep 2; cd /home/nuphase/nuphase_python; python reconfigureFPGA.py -a 0; python nuphase.py; sleep 2";
+reconfigure_fpga_cmd = "";
 
 //rms goal
 desired_rms= 4.200000;
