add randomize_sw_trigger to acq.cfg

--- a/cfg/acq.cfg
+++ b/cfg/acq.cfg
@@ -102,6 +102,9 @@ control:
    // software trigger interval (in seconds)
    sw_trigger_interval = 1;
 
+   // randomize sw trigger interval (using exponential distribution) 
+   randomize_sw_trigger = 0; 
+
    //enable the phased trigger readout
    enable_phased_trigger = 1;
 
