add support for reading out mate3

--- a/cfg/hk.cfg
+++ b/cfg/hk.cfg
@@ -14,3 +14,9 @@ shm_name="/hk.bin";
 //1 to print to screen
 print_to_screen=1;
 
+//mate3 address (or hostname)
+mate3_url = "162.252.89.77"; 
+
+//mate3 port (or 0 for default)
+mate3_port = 8080; 
+
