add veto options

--- a/cfg/acq.cfg
+++ b/cfg/acq.cfg
@@ -133,6 +133,34 @@ control:
    // load thresholds from status file on start.
    load_thresholds_from_status_file=1
 
+   //The pulse width of the veto (in units of 1/31.25 MHz) 
+   veto_pulse_width = 48; 
+
+   //Enable the saturation veto  
+   enable_saturation_cut = 1; 
+
+   //The cut value for the saturation (default 124)
+   saturation_cut_value = 124; 
+
+   //Enable the CW (via delay+sum)  veto  
+   enable_cw_cut = 1; 
+
+   //The cut value for the cw (default 50)
+   cw_cut_value = 50; 
+
+   //Enable the sideswipe veto
+   enable_sideswipe_cut = 1; 
+
+   //Sideswipe cut value (default 15) 
+   sideswipe_cut_value = 15; 
+
+   //Enable the extended cut
+   enable_extended_cut = 1; 
+
+   //The value of the extended cut (default 50) 
+   extended_cut_value = 50;
+  
+
 };
 
 // settings related to the acquisition
