first attempt at auto power mode

--- a/cfg/acq.cfg
+++ b/cfg/acq.cfg
@@ -263,3 +263,47 @@ output:
   copy_configs = 1;
 };
 
+
+//settings related to power on/off 
+power: 
+{
+  // If device isn't ready (too cold!) how long to wait until powering on 
+  try_again_sleep_amount=600; 
+
+  // Check if the device power is on at startup and intermittently
+  check_power_on = 0; 
+
+  // The current threshold used to determine if the device is on or not
+  adc_threshold_for_on = 1000; 
+
+  // Automatically power on if off an battery voltage is ok at startup
+  auto_power_on = 0; 
+
+  // Automatically power off is the battery voltage is not ok 
+  auto_power_off = 0;
+
+  // Time interval to check power on and if battery is too low (should be more than hk interval) 
+  power_monitor_interval = 20; 
+
+  // How many times the battery is allowed to return zero before considering it a failure mode 
+  nzero_threshold_to_turn_off = 3; 
+
+  // charge controller battery voltage threshold before auto turn off (ored with inv) 
+  cc_voltage_to_turn_off = 48; 
+
+  // inverter battery voltage threshold before auto turn off (ored with cc) 
+  inv_voltage_to_turn_off = 48; 
+
+  // charge controller battery voltage threshold before auto turn on (anded with inv) 
+  cc_voltage_to_turn_on = 52; 
+
+  // inverter battery voltage threshold before auto turn on (anded with cc) 
+  inv_voltage_to_turn_on = 52; 
+
+  //command to power on everything (called when using auto power on) 
+  power_on_command = "$HOME/scripts/turnAllOn.sh";
+
+  //command to power off everything (called when using auto power off and check power on) 
+  power_off_command = "$HOME/scripts/turnAllOff.sh";
+
+}; 
