--- a/cfg/acq.cfg
+++ b/cfg/acq.cfg
@@ -77,7 +77,7 @@ control:
    dynamic_masking_holdoff = 1000;
 
    // use fixed thresholds (don't servo!) 
-   use_fixed_thresholds = 0; 
+   use_fixed_thresholds = 1; 
    
    // pid loop proportional term
    k_p = 10;
@@ -98,7 +98,7 @@ control:
    monitor_interval = 1;
 
    // software trigger interval (in seconds)
-   sw_trigger_interval = 0.1;
+   sw_trigger_interval = 1.0;
 
    // randomize sw trigger interval (using exponential distribution)
    randomize_sw_trigger = 0;
@@ -165,7 +165,7 @@ control:
 device: 
 {
   //spi devices, master first, requires restart to change
-  spi_device = "/dev/spidev1.0"; 
+  spi_device = "/dev/spi/0.0"
 
   // circular buffer capacity. In-memory storage in between acquisition and writing. Requires restart.
   buffer_capacity = 256;
@@ -186,7 +186,7 @@ device:
   enable_extin = 1;
 
   // Trigger delay on external input, in units of us. Will be rounded to nearest 128 ns. Values above 8,388.608 us will wrap around...
-  extin_trig_delay_us = 500.2;
+  extin_trig_delay_us = 0;
 
   // The width of the trigger output in 40 ns intervals
   trigout_width = 3;
@@ -207,7 +207,8 @@ device:
   channel_read_mask = 0xff; 
 
   //command used to run the alignment program.
-  alignment_command="cd /home/nuphase/nuphase_python/;  python align_adcs_beacon.py",
+  alignment_command="test -d 1";
+  //alignment_command="cd /home/nuphase/nuphase_python/;  python align_adcs_beacon.py",
 
   //channel trig delays (right now can be 0-3)
   trig_delays = {
@@ -242,7 +243,7 @@ output:
   run_length = 10800; 
 
   //events per output file
-  events_per_file = 1000;
+  events_per_file = 200;
 
   //statuses per output file
   status_per_file = 200;
@@ -254,7 +255,7 @@ output:
   poll_usecs = 500;
 
   // Colon separated list of paths to copy (recursively) into run dir at start of run
-  copy_paths_to_rundir = "/home/beacon/beacon_python/output:/proc/loadavg";
+  copy_paths_to_rundir = "/home/nuphase/nuphase_python/output:/proc/loadavg";
 
   //Whether or not to copy configs into run dir
   copy_configs = 1;
